Bug 132441 - unnecessary thumbnail scrolling in Start Center
Summary: unnecessary thumbnail scrolling in Start Center
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Roman Kuznetsov
URL:
Whiteboard: target:7.0.0
Keywords:
: 127058 (view as bug list)
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2020-04-26 19:39 UTC by Roman Kuznetsov
Modified: 2021-07-28 10:19 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Image (to left - current, to right - should be) (271.98 KB, image/png)
2020-04-26 19:46 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2020-04-26 19:39:45 UTC
Description:
unnecessary thumbnail scrolling in Start Center.
If you have many recent documents (or just select Presentation templates), then you can scroll it in Start Center. 
But that scrolling is some wrong: last thumbnail row can be scroll to top of screen (please look at image in attach) and under it will be empty space.
If we'll look at any file manager in any OS and try scroll file list in it then we'll see that last row always stay on bottom of file manager window!

Steps to Reproduce:
1. Open Recent files or Presentation templates in Start Center
2. Scroll it
3. Look at last row, it's on top of window instead of bottom

Actual Results:
last thumbnail row can be scroll to top of window

Expected Results:
last thumbnail row always stays on bottom of window


Reproducible: Always


User Profile Reset: No



Additional Info:
-
Comment 1 Roman Kuznetsov 2020-04-26 19:46:05 UTC
Created attachment 159968 [details]
Image (to left - current, to right - should be)
Comment 2 Commit Notification 2020-04-29 09:22:15 UTC
Roman Kuznetsov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6cd1591fb8b0a550067c37cf720708c6a5630b6d

tdf#132441 thumb scrolling in Start Center should be more accuracy

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2020-05-03 18:09:50 UTC
It's ok on
Version: 7.0.0.0.alpha0+
Build ID: c79dd92480cbc409a7061da7f3dd3abaaf9a4883
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-05-03_07:05:49
Calc: threaded
Comment 4 BogdanB 2020-09-20 18:23:37 UTC
*** Bug 127058 has been marked as a duplicate of this bug. ***