tdf#132441 thumb scrolling in Start Center should be more accuracy

Change-Id: Iffee86c0046f5ec6dae0b0287ce098f9d821acaa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92779
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Roman Kuznetsov <antilibreoffice@gmail.com>